# XLSteam

./: CMakeLists.txt  IF97.h  XLSteamBackend.h  XLSteamFrontend.cpp  xll_template.cpp
demo/: CMakeLists.txt  main.cpp  num.cpp
fuzz/: CMakeLists.txt  fuzz.cpp
numeric/: roots.hpp
numeric/roots/: roots.hpp
tests/: CMakeLists.txt  TestXLSteamPH.cpp  TestXLSteamPS.cpp  TestXLSteamPT.cpp  TestXLSteamPU.cpp  TestXLSteamPV.cpp  TestXLSteamTV.cpp  TestXLSteamUV.cpp  catch_amalgamated.hpp
