#=======================================================================================================================
# Preamble
#=======================================================================================================================
cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
project(XLSteam.Demo)

#=======================================================================================================================
# Define TEST target
#=======================================================================================================================
add_executable(XLSteamDemo EXCLUDE_FROM_ALL "")
target_sources(XLSteamDemo
        PRIVATE
        main.cpp
        )